# interactive-music-performer

./: .gitignore  README.md  environment.yml  initial_data.sql  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py  schemas.py
app/core/: helpers.py  interactive_performer.py  midiport.py  online_dtw.py  stream_processor.py  utils.py
notebook/: audio_test.ipynb  match.ipynb  new_match.ipynb  new_match.py  online_dtw.ipynb  queue_size.ipynb  state_machine.ipynb  trim_midi.ipynb  visualize_musicxml.ipynb
resources/midi/subpieces/: 4-1.mid  4-2.mid  4-3.mid  4-4.mid  4-7.mid  4-8.mid  Haydn_Hob.XVI34_1-1.mid  Haydn_Hob.XVI34_1-10.mid  Haydn_Hob.XVI34_1-11.mid  Haydn_Hob.XVI34_1-12.mid  Haydn_Hob.XVI34_1-13.mid  Haydn_Hob.XVI34_1-14.mid  Haydn_Hob.XVI34_1-15.mid  Haydn_Hob.XVI34_1-16.mid  Haydn_Hob.XVI34_1-17.mid  Haydn_Hob.XVI34_1-18.mid  Haydn_Hob.XVI34_1-19.mid  Haydn_Hob.XVI34_1-3.mid  Haydn_Hob.XVI34_1-4.mid  Haydn_Hob.XVI34_1-7.mid  Haydn_Hob.XVI34_1-9.mid  Haydn_Hob.XVI34_3-17.mid  Haydn_Hob.XVI34_3-19.mid
resources/midi/subpieces/back/: Haydn_Hob.XVI34_3-19.mid
resources/midi/subpieces/backup2/: Haydn_Hob.XVI34_1-1.mid
