[tool.poetry]
name = "interactive-music-performer"
version = "0.1.0"
description = ""
authors = ["june.park <laurenceyoon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.75.0"
librosa = "0.9.1"
numpy = "1.20.0"
uvicorn = "0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
